--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom" onclick="alert('Pom')">Pom</button>
+        <button class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
         <button class="tecla tecla_tim">Tim</button>
 
@@ -45,4 +45,7 @@
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
 </body>
+
+<script src="main.js"></script>
+
 </html>
